<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A12222"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/title_1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingHorizontal="10dp"
        android:background="@color/main"
        android:fontFamily="@font/slabo_27px"
        android:text="@string/title_1_txt"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:background="@color/main"
        android:fontFamily="@font/slabo_27px"
        android:text="@string/title_2_txt"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@+id/title_1"
        app:layout_constraintEnd_toEndOf="@+id/title_1"/>

    <TextView
        android:id="@+id/title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/slabo_27px"
        android:text="@string/title_3_txt"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toTopOf="@+id/title_1"
        app:layout_constraintStart_toStartOf="@+id/title_1" />

    <TextView
        android:id="@+id/title_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/slabo_27px"
        android:text="@string/title_4_txt"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintStart_toEndOf="@+id/title_3"
        app:layout_constraintTop_toTopOf="@id/title_3" />

    <TextView
        android:id="@+id/title_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/slabo_27px"
        android:text="@string/title_5_txt"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="@id/title_3"
        app:layout_constraintStart_toEndOf="@+id/title_3" />

</androidx.constraintlayout.widget.ConstraintLayout>