<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="360dp"
    android:layout_height="180dp"
    android:background="@color/secondary"
    tools:context=".fragments.StatTab1Fragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skills_tab_1"
            android:textSize="18sp"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/acrobatic_Txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/acrobatics_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/animal_handling_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/animal_handling_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/arcana_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arcana_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/athletic_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/athletics_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="23dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/deception_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deception_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/history_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/insight_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insight_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/intimidation_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intimidation_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>