<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="360dp"
    android:layout_height="180dp"
    android:background="@color/secondary"
    tools:context=".fragments.StatTab2Fragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skills_tab_2"
            android:textSize="18sp"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/investigation_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/investigation_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/medicine_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicine_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/nature_txt"
                android:layout_width="22dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nature_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/perception_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perception_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="23dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/performance_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/performance_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/persuasion_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/persuasion_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/religion_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/religion_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/sleight_of_hand_txt"
                android:layout_width="22dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/default_value"
                android:textColor="@color/white"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleight_of_hand_skill_txt"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>